--- a/views/home.bebeton.html
+++ b/views/home.bebeton.html
@@ -1,38 +1,16 @@
-<h1>Home page</h1> 
+<h1>Home page</h1>
+{#for#} 
 <div class="mt-5">
     <div class="card mt-3">
         <div class="card-header">
-          Quote
+          {{ post.title }}
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>Я еду домой</p>
-            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-          </blockquote>
-        </div>
-    </div>
-
-    <div class="card mt-3">
-        <div class="card-header">
-          Quote
-        </div>
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>Я еду домой</p>
-            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-          </blockquote>
-        </div>
-    </div>
-
-    <div class="card mt-3">
-        <div class="card-header">
-          Quote
-        </div>
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>Я еду домой</p>
+            <p>{# content #}</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
           </blockquote>
         </div>
     </div>
 </div>
+{#endfor#}
